# cur-ai-ss

./: .env.test  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SETUP.md  alembic.ini  ecosystem.config.js  pyproject.toml  template.env
.claude/: settings.json
.github/workflows/: ci-check.yml  docker-build.yml
ansible/: playbook.yml
ansible/templates/: curator-compose.service.j2  curator.env.j2
app/: db.py  fastapi_app.py  main.py  models.py  worker.py
app/streamlit/: api.py  dashboard.py  details.py  main.py
cur-ai-ss/sqllite/: app.db
deployment/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker  docker-compose.yaml
deployment/ansible/: playbook.yml
eval/: api_to_tsv  compare_variants  hpo_report  patient_report
frontend/: .eslintrc.cjs  .gitignore  README.md  hey-api.config.ts  index.html  openapi-ts.config.ts  package.json  pnpm-workspace.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/patches/: react-pdf-highlighter@8.0.0-rc.0.patch
frontend/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
infrastructure/ansible/: ansible.cfg  playbook.yml
infrastructure/terraform/: network.tf
lib/: di.py  execute.py
lib/agents/: AGENT_GUIDE.md  base_instructions.py  chat_routing_agent.py  compound_het_agent.py  core_extraction_rules.py  general_paper_qa_agent.py  hpo_linking_agent.py  mondo_linking_agent.py  observation_agent.py  paper_extraction_agent.py  paper_section_classifier_agent.py  patient_demographics_agent.py  patient_extraction_agent.py  patient_phenotype_linking_agent.py  patient_variant_linking_agent.py  patient_variant_occurrence_agent.py  pedigree_describer_agent.py  phenotype_extraction_agent.py  phenotype_patient_linking_agent.py  run_tracking.py  segregation_analysis_computed_agent.py  segregation_evidence_extractor.py  table_correction_agent.py  variant_annotation_agent.py  variant_enrichment_agent.py  variant_extraction_agent.py  variant_harmonization_agent.py  vision.py
lib/api/: app.py  auth.py  db.py  middleware.py
lib/config/: caa.yaml  sample_config.yaml
lib/core/: email.py  environment.py  logging.py  security.py
lib/evagg/: __init__.py  app.py  io.py  simple.py
lib/misc/: gcs.py  segregation.py
lib/models/: __init__.py  agent_run.py  base.py  conversation.py  converters.py  curation_summary.py  evidence_block.py  family.py  gene_disease_relation.py  mondo.py  paper.py  patient.py  patient_variant_link.py  patient_variant_occurrences.py  phenotype.py  segregation.py  segregation_analysis.py  user.py  variant.py
lib/reference_data/: MONDO_MATCHING_STRATEGY.md  MONDO_MATCHING_STRATEGY_IMPLEMENTATION.md  MONDO_SQLITE_AGENT_PLAN.md  file_headers.py  hpo.py  mondo.py  upsert_gene_symbols.py
lib/rest/: app.py
lib/tasks/: __init__.py  handlers.py  misc.py  models.py
lib/ui/: api.py  auth.py  dashboard.py  details.py  helpers.py  streamlit_app.py
migrations/: README.md  env.py
migrations/versions/: 0001_squashed_initial_schema.py  01f89ca46c4c_refactor_patient_model_with_split_value_.py  05a3d6bb98ed_baseline_genes_and_papers_tables.py  0ecf9fe1c63b_clear_old_compound_het_confidences.py  139e89a5eb03_rename_enriched_variants_to_annotated_.py  141fefb08ebc_.py  170ae36b1b74_add_supplement_format_to_papers.py  1b59c56b7902_initial_schema.py  22d031751279_add_segregation_evidence_computed_.py  2572a7910764_add_skip_successors_to_tasks.py  26e1efd53c70_add_foreign_key_constraint_for_patient_.py  2c82db2f13fe_make_conversation_id_nullable.py  3226e581f26d_add_patient_variant_and_metadata_tables.py  3b2d941d02a2_add_consanguinity_to_families.py  3ba072e85738_split_paired_variant_confidence_and_.py  3ba1950b20cd_add_variant_field_to_variants_table.py  3cd5e8f1a2b4_add_families.py  3f8g9h0i1j2_add_affected_unaffected_counts.py  4283ef93dfa3_add_supplement_extension_to_papers.py  4cbb2b527fde_add_family_assignment_evidence_to_.py  4d0f368e0b7a_add_segregation_analyses_table.py  4d8d51219fe1_add_paper_extraction_metadata_columns.py  4ffa1c66601b_add_segregation_analyses_table.py  50d7e319ffa3_add_scoring_method_reasoning_block_to_.py  59e9bc9ffddb_standardize_timestamps_to_updated_at_.py  65bd823226af_add_hpos_table.py  794187dcb219_.py  (+66 more)
terraform/: compute.tf  main.tf
test/: conftest.py
var/: accuracy_report.txt  apply_mappings.py  apply_mappings_to_papers.py  hpo_accuracy_report.txt  patient_accuracy_report.txt  pmid_variants.tsv  pmid_variants_api.tsv  process_variants.py  training_papers.csv  training_papers_converted.csv  training_papers_standardized.csv  training_raw.csv  training_standardized.csv
(+143 files in other folders)
