[project]
name = "evagg"
version = "0.1.0"
description = "evagg"
requires-python = "==3.12.*"
authors = [
    {name = "Microsoft Biomedical Computing Group", email = "BiomedComp@microsoft.com"},
]
dependencies = [
    # General utilities
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "defusedxml==0.7.1",
    "ratelimit==2.2.1",
    "urllib3==2.2.2",
    "requests>=2.32.5",
    # AI/ML
    "openai==2.15.0",
    "openai-agents==0.7.0",
    "httpx==0.27.0",
    "scikit-learn==1.5.1",
    # Bioinformatics
    "biopython==1.84",
    "hpo3==1.3.1",
    # Scientific computing
    "numpy==2.0.0",
    "pandas==2.2.2",
    "ipykernel==6.29.5",
    "jinja2==3.1.4",
    "ipywidgets==8.1.3",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "plotly==5.22.0",
    # pdf parsing
    "docling==2.64.1",
    "streamlit[pdf]>=1.52.1",
    "fastapi>=0.126.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
]

[dependency-groups]
dev = [
    "ruff==0.14.6",
    "pyyaml==6.0.3",
    "mypy==1.10.1",
    "types-requests==2.32.0.*",
    "types-pyyaml==6.0.12.*",
    "types-retry==0.9.9.*",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.23.7",
    "watchdog>=6.0.0"
]

[tool.uv]
package = true

[tool.ruff]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
packages = ["lib"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "transformers.*"
follow_imports = "skip"

[tool.coverage.run]
omit = [
    "test/*",
    "bin/*",
    "lib/bin/*"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
