[project]
name = "caa"
version = "0.1.0"
description = "caa"
requires-python = "==3.12.*"
authors = [
    {name = "The Translational Genomics Group"},
]
dependencies = [
    # General utilities
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "requests>=2.32.5",
    "rapidfuzz>=3.0",
    # AI/ML
    "openai==2.15.0",
    "openai-agents==0.7.0",
    "fastapi>=0.126.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.21",
    "alembic>=1.18.4",
    "ipython",
    # pdf parsing
    "docling==2.64.1",
    "biopython>=1.86",
    "pymupdf>=1.26.7",
    "hpo-toolkit>=0.7.0",
    # Streamlit components
    "streamlit-pdf-viewer>=0.0.27",
    "streamlit-searchbox>=0.1.24",
    "prefect>=3.6.22",
]

[dependency-groups]
dev = [
    "ruff==0.14.6",
    "mypy==1.10.1",
    "types-requests==2.32.0.*",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "watchdog>=6.0.0"
]

[tool.uv]
package = true

[tool.ruff]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
packages = ["lib"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "transformers.*"
follow_imports = "skip"

[tool.coverage.run]
omit = [
    "test/*",
    "bin/*",
    "lib/bin/*"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
